--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="assets/css/style.css">
   <link rel="stylesheet" href="assets/css/bootstrap.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="manifest" href="dist/manifest.json">
 
   <!-- not needed with webpack, delete in all html used-->
   <!-- <script src='assets/js/vendor/jQuery.js' defer></script> -->
@@ -20,8 +21,6 @@
   <!-- webpack bundle -->
   <!--script src="./dist/main.bundle.js" defer ></script //before generate the new dist-->
   <script src="./dist/app.bundle.js" defer ></script>
-
- 
 
 </head>
 <body>
