--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <link rel="stylesheet" href="assets/css/bootstrap.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   
-  <!--  <link rel="manifest" href="dist/manifest.json"> -->
-  <link rel="manifest" href="./manifest.json">
+    <link rel="manifest" href="dist/manifest.json"> 
+ <!-- <link rel="manifest" href="./manifest.json">-->
 
   <!-- not needed with webpack, delete in all html used-->
   <!-- <script src='assets/js/vendor/jQuery.js' defer></script> -->
