--- a/events.html
+++ b/events.html
@@ -71,7 +71,7 @@
         </div>
       </div>
     </div>
-    <div class="footer-copyright text-center py-3 text-white">© 2019 Trilogy Education Services, a 2U, Inc. brand. All
+    <div class="footer-copyright text-center py-3 text-white">© 2020 Annia Valdes. All
       Rights Reserved.</div>
   </footer>
 </body>
